--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -435,7 +435,7 @@
 	 
 <details><summary><strong>Condition 2</strong>: More than 50% of the distance travelled is for business driving</summary>
 <div id="ajax-distance">
-<p id="cond2">You need to determine if more than 50% of the distance travelled is for business driving. Use the following to calculate the share of the distance travelled for business driving:</p>
+<p id="cond2">You need to determine if more than 50% of the distance travelled is for <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">business driving&nbsp;<span class="far fa-question-circle"></span></a>. Use the following to calculate the share of the distance travelled for business driving:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
 		 <li><span class="fa-stack text-success">
@@ -447,7 +447,7 @@
                                  <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-hashtag fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Total kilometres driven for <a href="#personal2" aria-controls="centred-popup" class="wb-lbx" role="button">business and personal&nbsp;<span class="far fa-question-circle"></span></a>driving</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> Total kilometres driven for business and personal driving</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
  			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
@@ -524,17 +524,15 @@
 </div></details>
 
 <details><summary><strong>Condition 3</strong>: Determine if the number of kilometres of personal driving is within the limit for the reduced standby charge</summary> 
-<p id="cond3">The number of kilometres travelled of personal driving must be less than 1,667 km per 30 day period or 20,004 km in the year. Use the following to calculate the personal use quotient. </p>
+<p id="cond3">The number of kilometres travelled of <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> must be less than 1,667 km per 30 day period or 20,004 km in the year. Use the following to calculate the personal use quotient: </p>
  <ol class="lst-stps-sub ld-zr stps-strpd">
 
 <li><details><summary>Determine the actual number of kilometres travelled for personal driving</summary> 
-<p id="step7a">Based on the <a href="#records" aria-controls="centred-popup" class="wb-lbx" role="button">required information (logbook)&nbsp;<span class="far fa-question-circle"></span></a> you received from your employee, determine the actual number of kilometres travelled for personal driving.</p>
-<p> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
+<p id="step7a">Based on the <a href="#log" aria-controls="centred-popup" class="wb-lbx" role="button">required records&nbsp;<span class="far fa-question-circle"></span></a> you received from your employee, determine the actual number of kilometres travelled for personal driving.</p>
 </details></li>
 
 <li><details><summary>Calculate the limit that applies to the number of kilometres travelled for personal driving</summary> 
-<p id="step7b">The number of kilometres travelled for personal driving cannot exceed 1,667 kilometres per 30-day period or 20,004 kilometres in the year to meet one of the conditions for the reduced standby charge.</p>
-<p>Use the following to calculate the limit that applies to the number of kilometres travelled for personal driving:</p>
+<p id="step7b">Use the following to calculate the limit that applies to the number of kilometres travelled for personal driving:</p>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
 
@@ -621,13 +619,13 @@
 		 <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-hashtag fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> Actual number of kilometres travelled for personal driving (step 9a)</span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> Actual number of kilometres travelled for personal driving (step 7a)</span> 
                                  </li>
 <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-hashtag fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5">  Limit that applies to the number of kilometres travelled for personal driving (step 9b) </span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5">  Limit that applies to the number of kilometres travelled for personal driving (step 7b) </span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
  			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
@@ -661,13 +659,14 @@
                                     </span></span> </li>
 </ul>
 </details>
+
+</details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the personal use quotient is <strong>more than 1</strong>, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
                          <li class="cnjnctn-col"> <p><span class="fas fa-check fa-lg text-success"></span> If the personal use quotient is <strong>less than 1</strong> (calculations from step 7a, 7b and 7C), the benefit meets the <strong>one of the conditions for the reduced standby charge</strong>. </p> </li>
                           </ul>
 
-</details>
 </li></ol></details>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
