--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -664,7 +664,7 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the personal use quotient is <strong>more than 1</strong>, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
-                         <li class="cnjnctn-col"> <p><span class="fas fa-check fa-lg text-success"></span> If the personal use quotient is <strong>less than 1</strong> (calculations from step 7a, 7b and 7C), the benefit meets the <strong>one of the conditions for the reduced standby charge</strong>. </p> </li>
+                         <li class="cnjnctn-col"> <p><span class="fas fa-check fa-lg text-success"></span> If the personal use quotient is <strong>less than 1</strong> (calculations from step 7a, 7b and 7C), the benefit meets <strong>one of the conditions for the reduced standby charge</strong>. </p> </li>
                           </ul>
 
 </li></ol></details>
