--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -676,13 +676,14 @@
 
 
 <li><h3 id="step8">Calculate the standby charge benefit</h3>
-
-<h4><span class="fas fa-laptop text-muted fa-lg"></span> Automobile Benefits Online Calculator (ABOC)</h4>
+<p>Use any of the following methods to calculate the automobile benefit:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li><h4><span class="fas fa-laptop text-muted fa-lg"></span> Automobile Benefits Online Calculator (ABOC)</h4>
 <p>Use the <span class="fas fa-calculator"></span> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator</a> (ABOC) to easily calculate the benefit.</p>
-
-<h4><span class="fas fa-file-alt fa-lg text-muted"></span> Paper Form RC18</h4>
-<p>The CRA encourages you to use ABOC to calculate. However, if you <strong>do not</strong> have to, you can use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits.</a></p>
-
+</li>
+<li><h4><span class="fas fa-calculator fa-lg text-muted"></span> Manually calculate</h4>
+<p>The CRA encourages you to use ABOC to calculate. However, you can continue using step 8 or use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a></p>
+</li></ul>
 
 <p id="calstand">If you <a href="#availability2" aria-controls="centred-popup" class="wb-lbx" role="button">make an automobile available&nbsp;<span class="far fa-question-circle"></span></a> to your employee, you must calculate the value of the standby charge related to the <a href="#personal2" aria-controls="centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> and the <strong>availability</strong> of the automobile.</p>
 <details><summary>How to calculate the value using estimates during the year</summary>
