--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -678,10 +678,10 @@
 <li><h3 id="step8">Calculate the standby charge benefit</h3>
 <p>Use any of the following methods to calculate the automobile benefit:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
-<li><h4><span class="fas fa-laptop text-muted fa-lg"></span> Automobile Benefits Online Calculator (ABOC)</h4>
-<p>Use the <span class="fas fa-calculator"></span> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator</a> (ABOC) to easily calculate the benefit.</p>
+<li class="cnjnctn-col"><h4><span class="fas fa-laptop text-muted"></span> Automobile Benefits Online Calculator (ABOC)</h4>
+<p>Use the <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator</a> (ABOC) to easily calculate the benefit.</p>
 </li>
-<li><h4><span class="fas fa-calculator fa-lg text-muted"></span> Manually calculate</h4>
+<li class="cnjnctn-col"><h4><span class="fas fa-laptop text-muted"></span> Manually calculate</h4> 
 <p>The CRA encourages you to use ABOC to calculate. However, you can continue using step 8 or use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a></p>
 </li></ul>
 
