--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -677,13 +677,18 @@
 
 <li><h3 id="step8">Calculate the standby charge benefit</h3>
 <p>Use any of the following methods to calculate the automobile benefit:</p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col"><h4><span class="fas fa-laptop text-muted"></span> Automobile Benefits Online Calculator (ABOC)</h4>
 <p>Use the <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator</a> (ABOC) to easily calculate the benefit.</p>
 </li>
-<li class="cnjnctn-col"><h4><span class="fas fa-laptop text-muted"></span> Manually calculate</h4> 
-<p>The CRA encourages you to use ABOC to calculate. However, you can continue using step 8 or use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a></p>
-</li></ul>
+<li class="cnjnctn-col"><h4><span class="fas fa-file-alt fa-lg text-muted"></span> Manually calculate</h4> 
+<p>The CRA encourages you to use ABOC to calculate. However, you can manually calculate using: </p>
+<ul class="list-unstyled cnjnctn-type-or">
+<li class="cnjnctn-col"> <a href="#calstand">step 8</a> </li>
+<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a></li>
+</ul>
+</li>
+</ul>
 
 <p id="calstand">If you <a href="#availability2" aria-controls="centred-popup" class="wb-lbx" role="button">make an automobile available&nbsp;<span class="far fa-question-circle"></span></a> to your employee, you must calculate the value of the standby charge related to the <a href="#personal2" aria-controls="centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> and the <strong>availability</strong> of the automobile.</p>
 <details><summary>How to calculate the value using estimates during the year</summary>
