--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -682,10 +682,10 @@
 <p>Use the <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator</a> (ABOC) to easily calculate the benefit.</p>
 </li>
 <li class="cnjnctn-col"><h4><span class="fas fa-file-alt fa-lg text-muted"></span> Manually calculate</h4> 
-<p>The CRA encourages you to use ABOC to calculate. However, you can manually calculate using: </p>
+<p>The CRA encourages you to use ABOC to calculate. However, use one of the following to manually calculate: </p>
 <ul class="list-unstyled cnjnctn-type-or">
-<li class="cnjnctn-col"> <a href="#calstand">step 8</a> </li>
-<li class="cnjnctn-col"><a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a></li>
+<li class="cnjnctn-col"> Continue to: <a href="#calstand">Step 8 to 10</a> </li>
+<li class="cnjnctn-col">Use Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">RC18, Calculating Automobile Benefits</a></li>
 </ul>
 </li>
 </ul>
