--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -692,9 +692,9 @@
 
 <p id="calstand">If you <a href="#availability2" aria-controls="centred-popup" class="wb-lbx" role="button">make an automobile available&nbsp;<span class="far fa-question-circle"></span></a> to your employee, you must calculate the value of the standby charge related to the <a href="#personal2" aria-controls="centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> and the <strong>availability</strong> of the automobile.</p>
 <details><summary>How to calculate the value using estimates during the year</summary>
-<p>During the year, you must calculate the value of the benefit using estimates. To obtain the amount you must add to the employee’s salary for a given pay period, you must divide the value of the benefit you have 
+<p>During the year, calculate the value of the benefit using estimates. To obtain the amount you must add to the employee’s salary for a given pay period, you must divide the value of the benefit you have 
 estimated by the number of pay periods in the year. </p>
-<p>At the end of the year, you must calculate the value of the benefit related to an automobile using the actual number of kilometres travelled during the year.</p>
+<p>At the end of the year, you must calculate the value of the benefit related to an automobile using the actual number of personal kilometres travelled during the year.</p>
 </details>
 
 <h4 class="mrgn-tp-md">Situations</h4>
@@ -703,8 +703,8 @@ estimated by the number of pay periods in the year. </p>
 <ul class="fa-ul">
 <li><span class="fas fa-check fa-li text-success"></span> You own the automobile provided to the employee </li>
 <li><span class="fas fa-check fa-li text-success"></span> The employee uses the same automobile throughout the year </li>
-<li><span class="fas fa-check fa-li text-success"></span> The employee's duties <strong>do not</strong> consist primarily in selling or leasing automobiles </li>
-<li><span class="fas fa-check fa-li text-success"></span> The employee is <strong>not</strong> eligible for a reduction of the value of the standby charge</li>
+<li><span class="fas fa-check fa-li text-success"></span> The employee's principal source of employment is <strong>not</strong> selling or leasing automobiles </li>
+<li><span class="fas fa-check fa-li text-success"></span> The employee is <strong>not</strong> eligible for the reduced standby charge</li>
 </ul>
 	    
 <details><summary>What is included in the cost of the automobile</summary>
@@ -712,17 +712,18 @@ estimated by the number of pay periods in the year. </p>
 <p>The cost of the automobile includes all of the following:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
   <li class="cnjnctn-col">Cost of the automobile when it was bought, including options and accessories, and the GST/HST and PST, but <strong>not including</strong> any reduction for a trade-in </li>
-  <li class="cnjnctn-col">Cost of additions, including the GST/HST and PST, made to the automobile after it was bought </li>
+  <li class="cnjnctn-col">Cost of additions, including the GST/HST and PST, made to the automobile after it was bought (that you add to the capital cost of the automobile to calculate the deduction for depreciation)</li>
 </ul>
 <p>Where the automobile was purchased from a non-arm's length person, the cost is generally equal to the fair market value when it was bought, including options and GST/HST or PST.</p>
 </div>
 </details>
 <details><summary>How to calculate the cost of the automobile when used as part of an automobile fleet</summary>
-<div id="ajax-fleet"><p>During the year, when your employee uses at least one automobile that is part of an automobile fleet that you operate, the guidelines below apply for calculating the cost of the automobile.</p>
+<div id="ajax-fleet"><p>During the year, when your employee uses an automobile that is part of an automobile fleet that you operate, the guidelines below apply for calculating the cost of the automobile.</p>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col">If an automobile is assigned to your employee from a fleet or pool on a long-term or exclusive basis, you can calculate the standby charge based solely on the cost of the automobile assigned to the employee. </li>
-<li class="cnjnctn-col">If your employee uses more than one automobile and your fleet is mostly made up of similar automobiles, or if it can be grouped into a few similar groups, you can calculate the cost of the automobile based on the average cost of the group from which the automobile was provided to your employee.<p><strong>You and your employee must both approve</strong> this calculation method.</p></li>
+<li class="cnjnctn-col">If an automobile is assigned to your employee from a fleet or pool on a long-term or exclusive basis, the cost of the automobile assigned to the employee should be used when you calculate the standby charge. </li>
+<li class="cnjnctn-col">If your employee uses more than one automobile and your fleet is mostly made up of similar automobiles, or if it can be grouped into a few similar groups, you can calculate the cost of the automobile based on the average cost of the group from which the automobile was provided to your employee.
+<p><strong>You and your employee have to agree</strong> to this calculation method.</p></li>
 </ul>
 <h4><strong>Example</strong></h4>
 <p>In 20X5, Company Y business operated a fleet of 10 automobiles belonging to the employer, which had been grouped as follows:</p>
