--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -678,12 +678,12 @@
 <li><h3 id="step8">Calculate the standby charge benefit</h3>
 <p>Use any of the following methods to calculate the automobile benefit:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col"><h4><span class="fas fa-laptop text-muted"></span> Automobile Benefits Online Calculator (ABOC)</h4>
+<li class="cnjnctn-col"><h4><span class="fas fa-laptop text-muted"> </span> Automobile Benefits Online Calculator (ABOC)</h4>
 <p>Use the <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator</a> (ABOC) to easily calculate the benefit.</p>
 </li>
-<li class="cnjnctn-col"><h4><span class="fas fa-file-alt fa-lg text-muted"></span> Manually calculate</h4> 
+<li class="cnjnctn-col"><h4><span class="fas fa-file-alt text-muted"> </span> Manually calculate</h4> 
 <p>The CRA encourages you to use ABOC to calculate. However, use one of the following to manually calculate: </p>
-<ul class="list-unstyled cnjnctn-type-or">
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"> Continue to: <a href="#calstand">Step 8 to 10</a> </li>
 <li class="cnjnctn-col">Use Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">RC18, Calculating Automobile Benefits</a></li>
 </ul>
