--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -784,8 +784,11 @@ estimated by the number of pay periods in the year. </p>
 	<td><strong>Average cost:</strong> </td>
 	<td class="align-right"><strong>$35,000</strong> </td>
 </tr> </tbody> </table>
-<p>In 20X7, Company Y made an automobile available to Steve. Steve chose an automobile from Group A. <br /><br />Steve and his employer agreed that the average cost of the automobile, for the purpose of calculating the reasonable standby charge, would be <strong>$21,850</strong>.</p>
-
+<p>If the automobile was provided to the employee from:</p>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+  <li class="cnjnctn-col">Group A, use the average cost of $21,850 for the cost of the automobile in the standby charge calculation</li>
+<li class="cnjnctn-col">Group B, use the average cost of $35,000 for the cost of the automobile in the standby charge calculation</li>
+</ul>
 </div></div></details>
 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
