--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -685,7 +685,7 @@
 <p>The CRA encourages you to use ABOC to calculate. However, use one of the following to manually calculate: </p>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"> Continue to: <a href="#calstand">Step 8 to 10</a> </li>
-<li class="cnjnctn-col">Use Form <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">RC18, Calculating Automobile Benefits</a></li>
+<li class="cnjnctn-col">Use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a></li>
 </ul>
 </li>
 </ul>
@@ -790,7 +790,7 @@ estimated by the number of pay periods in the year. </p>
 <li class="cnjnctn-col">Group B, use the average cost of $35,000 for the cost of the automobile in the standby charge calculation</li>
 </ul>
 </div></div></details>
-
+<p>Use the following to calculate the standby charge if your employee is eligible for the simplified calculation:</p>
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
                                  <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
