--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -669,27 +669,21 @@
 </li></ol></details>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-			 <li class="cnjnctn-col"><span class="fas fa-check fa-lg text-success"></span> If the the employee <strong>does not</strong> meet all conditions to be eligible for the reduced standby charge continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></li>
-                         <li class="cnjnctn-col"> <span class="fas fa-check fa-lg text-success"></span> If the the employee meets <strong>all</strong> conditions to be eligible for the reduced standby charge continue to: <a href="#standbyreduce">Step 8 - Calculate the reduced standby charge benefit</a> </li>
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> calculate using the reduced standby charge</p></li>
+                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If the the employee meets <strong>all</strong> conditions, calculate using reduced standby charge</p></li>
                           </ul>
 </li>
 
-
-<li><h3 id="step8">Calculate the standby charge benefit</h3>
-<p>Use any of the following methods to calculate the automobile benefit:</p>
+<li><h3 id="step8">Determine which method to use to calculate the benefit</h3>
+<p>Use any of the following methods to calculate the automobile <strong>standby charge</strong> and the <strong>operating expenses</strong> benefit:</p>
 <ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col"><h4><span class="fas fa-laptop text-muted"> </span> Automobile Benefits Online Calculator (ABOC)</h4>
-<p>Use the <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator</a> (ABOC) to easily calculate the benefit.</p>
-</li>
-<li class="cnjnctn-col"><h4><span class="fas fa-file-alt text-muted"> </span> Manually calculate</h4> 
-<p>The CRA encourages you to use ABOC to calculate. However, use one of the following to manually calculate: </p>
-<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"> Continue to: <a href="#calstand">Step 8 to 10</a> </li>
-<li class="cnjnctn-col">Use <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a></li>
+<li class="cnjnctn-col"><span class="fas fa-laptop text-muted"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator (ABOC)</a> to easily calculate the benefit</li>
+<li class="cnjnctn-col"><span class="fas fa-file-alt text-muted"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a> to manually calculate</li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#calstand">Step 8 to 10</a> to manually calculate which includes calculation examples </li>
 </ul>
 </li>
-</ul>
 
+<li><h3 id="step9">Calculate the standby charge benefit</h3>
 <p id="calstand">If you <a href="#availability2" aria-controls="centred-popup" class="wb-lbx" role="button">make an automobile available&nbsp;<span class="far fa-question-circle"></span></a> to your employee, you must calculate the value of the standby charge related to the <a href="#personal2" aria-controls="centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> and the <strong>availability</strong> of the automobile.</p>
 <details><summary>How to calculate the value using estimates during the year</summary>
 <p>During the year, calculate the value of the benefit using estimates. To obtain the amount you must add to the employee’s salary for a given pay period, you must divide the value of the benefit you have 
