--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -407,7 +407,7 @@
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge.</p> 
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine which method to use to calculate the benefit</a></p></li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the employee kept the <strong> required detailed records</strong> and you received a copy, the employee may be eligible for the <strong>reduced standby charge</strong>.</p>
 <p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the employee is eligible for the reduced standby charge</a></p></li>
 </ul>
@@ -425,7 +425,7 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use the automobile as part of their duties of an office or employment, your employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p>  </li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine which method to use to calculate the benefit</a></p>  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use the automobile as part of their duties of an office or employment, the benefit meets <strong>one of the conditions for the reduced standby charge</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#cond2">Condition 2: More than 50% of the distance travelled is for business driving</a></p></li>
 
@@ -516,7 +516,7 @@
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 	 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the automobile is driven <strong>50% or less</strong> for business driving, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
-	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
+	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine which method to use to calculate the benefit</a></p></li>
          <li class="cnjnctn-col">  <p><span class="fas fa-check fa-lg text-success"></span> If <strong>more than 50%</strong> of the distance travelled is for business driving, the benefit meets the <strong>one of the conditions for the reduced standby charge</strong>. </p>
 	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#cond3">Condition 3: Number of kilometres of personal driving is within the limit for the reduced standby charge</a></p></li>
                            </ul>
@@ -642,13 +642,13 @@
 		 <li><span class="fa-stack text-success">
                                     <span class="far fa-circle fa-stack-2x"></span>
                                     <span class="fas fa-hashtag fa-stack-1x"></span>
-                                    </span><span class="mrgn-tp-0 text-muted h5"> 5,500 is Judith's actual number of kilometres travelled for personal driving (step 9a)</span> 
+                                    </span><span class="mrgn-tp-0 text-muted h5"> 5,500 is Judith's actual number of kilometres travelled for personal driving (step 7a)</span> 
                                  </li>
 <li class="brdr-bttm">
                                  <span class="fas  fa-li"><span class="fas fa-divide"></span><span class="wb-inv">divide by</span></span> <span class="fa-stack text-success">
                                  <span class="far fa-circle fa-stack-2x"></span>
                                  <span class="fas fa-hashtag fa-stack-1x"></span>
-                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 8,335 is Judith's limit that applies to the number of kilometres travelled for personal driving (step 9b)</span>
+                                 </span>  <span class="mrgn-tp-0 text-muted h5"> 8,335 is Judith's limit that applies to the number of kilometres travelled for personal driving (step 7b)</span>
                                  <div class="mrgn-tp-md"></div>
                               </li>
  			<li><span class="fas  fa-li"><span class="fas fa-equals"></span> <span class="wb-inv">equals</span></span> <span class="mrgn-tp-0 text-muted"><span class="fa-stack text-success">
@@ -661,8 +661,7 @@
 
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the personal use quotient is <strong>more than 1</strong>, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Calculate the standby charge benefit</a></p></li>
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the personal use quotient is <strong>more than 1</strong>, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p></li>
                          <li class="cnjnctn-col"> <p><span class="fas fa-check fa-lg text-success"></span> If the personal use quotient is <strong>less than 1</strong> (calculations from step 7a, 7b and 7C), the benefit meets <strong>one of the conditions for the reduced standby charge</strong>. </p> </li>
                           </ul>
 
