--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -675,11 +675,12 @@
 
 <li><h3 id="step8">Determine which method to use to calculate the benefit</h3>
 <p>Use any of the following methods to calculate the automobile <strong>standby charge</strong> and the <strong>operating expenses</strong> benefit:</p>
-<ul class="list-unstyled cnjnctn-type-and">
-<li class="cnjnctn-col"><span class="fas fa-laptop text-muted"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator (ABOC)</a> to easily calculate the benefit</li>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col"><span class="fas fa-laptop text-muted"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator (ABOC)</a> to easily calculate</li>
 <li class="cnjnctn-col"><span class="fas fa-file-alt text-muted"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a> to manually calculate</li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#calstand">Step 8 to 10</a> to manually calculate which includes calculation examples </li>
 </ul>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span>You can also continue to: <a href="#calstand">Step 8 to 10</a> to manually calculate, including calculation examples.</p>
+
 </li>
 
 <li><h3 id="step9">Calculate the standby charge benefit</h3>
