--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -691,7 +691,7 @@ estimated by the number of pay periods in the year. </p>
 <p>At the end of the year, you must calculate the value of the benefit related to an automobile using the actual number of personal kilometres travelled during the year.</p>
 </details>
 
-<h4 class="mrgn-tp-md">Situations</h4>
+<h4 id="simple" class="mrgn-tp-md">Simplified calculation</h4>
  <details><summary>Situation: You <strong>own</strong> the automobile and you want to calculate using the <strong>simplified</strong> calculation</summary>
 <p>You can use the simplified calculation if <strong>all</strong> the following apply: </p>
 <ul class="fa-ul">
@@ -861,7 +861,8 @@ estimated by the number of pay periods in the year. </p>
 </ul>
 </details>
 </details>
-	
+
+<h4 id="detailedmethod" class="mrgn-tp-md">Detailed calculation</h4>	
 <details><summary>Situation: You <strong>own</strong> the automobile and you want to calculate using the <strong>detailed</strong> calculation</summary>
 
 <p id="calcdetail">Use this following to calculate if you own the automobile:</p> 
@@ -1461,7 +1462,7 @@ estimated by the number of pay periods in the year. </p>
 
 </details>
 </details>
-
+<h4 id="reducedmethod" class="mrgn-tp-md">Reduced standby charge calculation</h4>
 <details><summary>Situation: You want to calculate using the <strong>reduced standby charge</strong></summary>
 
 <p id="standbyreduce">Use the following to calculate the reduced standby charge if <strong>all conditions in steps 6, 7, 8 and 9 are met</strong>.</p>
