--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -691,8 +691,8 @@
 estimated by the number of pay periods in the year. </p>
 <p>At the end of the year, you must calculate the value of the benefit related to an automobile using the actual number of personal kilometres travelled during the year.</p>
 </details>
-
-<h4 id="simple" class="mrgn-tp-md">Simplified calculation</h4>
+</br>
+<h4 id="simple" class="mrgn-tp-lg">Simplified calculation</h4>
  <details><summary>Situation: You <strong>own</strong> the automobile and you want to calculate using the <strong>simplified</strong> calculation</summary>
 <p>You can use the simplified calculation if <strong>all</strong> the following apply: </p>
 <ul class="fa-ul">
@@ -862,7 +862,7 @@ estimated by the number of pay periods in the year. </p>
 </ul>
 </details>
 </details>
-
+</br>
 <h4 id="detailedmethod" class="mrgn-tp-md">Detailed calculation</h4>	
 <details><summary>Situation: You <strong>own</strong> the automobile and you want to calculate using the <strong>detailed</strong> calculation</summary>
 
@@ -1463,6 +1463,7 @@ estimated by the number of pay periods in the year. </p>
 
 </details>
 </details>
+</br>
 <h4 id="reducedmethod" class="mrgn-tp-md">Reduced standby charge calculation</h4>
 <details><summary>Situation: You want to calculate using the <strong>reduced standby charge</strong></summary>
 
