--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -669,7 +669,7 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> calculate using the reduced standby charge</p></li>
-                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If the the employee meets <strong>all</strong> conditions, calculate using reduced standby charge</p></li>
+                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If the employee meets <strong>all</strong> conditions, calculate using reduced standby charge</p></li>
                           </ul>
 </li>
 
@@ -1467,7 +1467,7 @@ estimated by the number of pay periods in the year. </p>
 <h4 id="reducedmethod" class="mrgn-tp-md">Reduced standby charge calculation</h4>
 <details><summary>Situation: You want to calculate using the <strong>reduced standby charge</strong></summary>
 
-<p id="standbyreduce">Use the following to calculate the reduced standby charge if <strong>all conditions in steps 6, 7, 8 and 9 are met</strong>.</p>
+<p id="standbyreduce">Use the following to calculate the reduced standby charge if <strong>all conditions in steps 7 are met</strong>.</p>
 
 <h4>Step A - Use and availability</h4> 
 <ul class="fa-ul lst-spcd mrgn-tp-md mrgn-bttm-lg mrgn-lft-lg">
