--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -407,7 +407,7 @@
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge.</p> 
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine which method to use to calculate the benefit</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a></p></li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the employee kept the <strong> required detailed records</strong> and you received a copy, the employee may be eligible for the <strong>reduced standby charge</strong>.</p>
 <p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the employee is eligible for the reduced standby charge</a></p></li>
 </ul>
@@ -425,7 +425,7 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> require your employee to use the automobile as part of their duties of an office or employment, your employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine which method to use to calculate the benefit</a></p>  </li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a></p>  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If you required your employee to use the automobile as part of their duties of an office or employment, the benefit meets <strong>one of the conditions for the reduced standby charge</strong>. </p>
 <p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#cond2">Condition 2: More than 50% of the distance travelled is for business driving</a></p></li>
 
@@ -516,7 +516,7 @@
 </details>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 	 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the automobile is driven <strong>50% or less</strong> for business driving, the employee <strong>does not</strong> benefit from the reduction to the standby charge. </p>
-	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine which method to use to calculate the benefit</a></p></li>
+	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a></p></li>
          <li class="cnjnctn-col">  <p><span class="fas fa-check fa-lg text-success"></span> If <strong>more than 50%</strong> of the distance travelled is for business driving, the benefit meets the <strong>one of the conditions for the reduced standby charge</strong>. </p>
 	<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#cond3">Condition 3: Number of kilometres of personal driving is within the limit for the reduced standby charge</a></p></li>
                            </ul>
@@ -668,23 +668,41 @@
 </li></ol></details>
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> calculate using the reduced standby charge</p></li>
-                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If the employee meets <strong>all</strong> conditions, calculate using reduced standby charge</p></li>
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> calculate using the reduced standby charge.</p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine if the employee is eligible for the simplified standby charge calculation</a></p>
+
+</li>
+                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If the employee meets <strong>all</strong> conditions, calculate using reduced standby charge.</p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a></p>
+
+</li>
                           </ul>
 </li>
 
-<li><h3 id="step8">Determine which method to use to calculate the benefit</h3>
+<li><h3 id="step8">Determine if the employee is eligible for the simplified standby charge calculation </h3>
+<p>You can use the simplified calculation if <strong>all</strong> the following apply: </p>
+<ul class="fa-ul">
+<li><span class="fas fa-check fa-li text-success"></span> You own the automobile provided to the employee </li>
+<li><span class="fas fa-check fa-li text-success"></span> The employee uses the same automobile throughout the year </li>
+<li><span class="fas fa-check fa-li text-success"></span> The employee's principal source of employment is <strong>not</strong> selling or leasing automobiles </li>
+<li><span class="fas fa-check fa-li text-success"></span> The employee is <strong>not</strong> eligible for the reduced standby charge</li>
+</ul>
+
+</li>
+
+
+<li><h3 id="step9">Determine which method to use to calculate the benefit</h3>
 <p>Use any of the following methods to calculate the automobile <strong>standby charge</strong> and the <strong>operating expenses</strong> benefit:</p>
 <ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-laptop text-muted"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/e-services/e-services-businesses/automobile-benefits-online-calculator-disclaimer.html">Automobile Benefits Online Calculator (ABOC)</a> to easily calculate</li>
 <li class="cnjnctn-col"><span class="fas fa-file-alt text-muted"> </span> <a href="https://www.canada.ca/en/revenue-agency/services/forms-publications/forms/rc18.html">Form RC18, Calculating Automobile Benefits</a> to manually calculate</li>
 </ul>
 <hr>
-<p><span class="fas fa-arrow-down text-success fa-lg"> </span> You can also continue to <a href="#step9">Step 9 to 11</a> to manually calculate, including calculation examples.</p>
+<p><span class="fas fa-arrow-down text-success fa-lg"> </span> You can also continue to <a href="#step10">Step 10 to 12</a> to manually calculate, including calculation examples.</p>
 
 </li>
 
-<li><h3 id="step9">Calculate the standby charge benefit</h3>
+<li><h3 id="step10">Calculate the standby charge benefit</h3>
 <p id="calstand">If you <a href="#availability2" aria-controls="centred-popup" class="wb-lbx" role="button">make an automobile available&nbsp;<span class="far fa-question-circle"></span></a> to your employee, you must calculate the value of the standby charge related to the <a href="#personal2" aria-controls="centred-popup" class="wb-lbx" role="button">personal driving&nbsp;<span class="far fa-question-circle"></span></a> and the <strong>availability</strong> of the automobile.</p>
 <details><summary>How to calculate the value using estimates during the year</summary>
 <p>During the year, calculate the value of the benefit using estimates. To obtain the amount you must add to the employee’s salary for a given pay period, you must divide the value of the benefit you have 
@@ -694,13 +712,7 @@ estimated by the number of pay periods in the year. </p>
 </br>
 <h4 id="simple" class="mrgn-tp-lg">Simplified calculation</h4>
  <details><summary>Situation: You <strong>own</strong> the automobile and you want to calculate using the <strong>simplified</strong> calculation</summary>
-<p>You can use the simplified calculation if <strong>all</strong> the following apply: </p>
-<ul class="fa-ul">
-<li><span class="fas fa-check fa-li text-success"></span> You own the automobile provided to the employee </li>
-<li><span class="fas fa-check fa-li text-success"></span> The employee uses the same automobile throughout the year </li>
-<li><span class="fas fa-check fa-li text-success"></span> The employee's principal source of employment is <strong>not</strong> selling or leasing automobiles </li>
-<li><span class="fas fa-check fa-li text-success"></span> The employee is <strong>not</strong> eligible for the reduced standby charge</li>
-</ul>
+<p id="simple1">Use the following to calculate the simplified calculation if <strong>all conditions in steps 8 are met</strong>.</p>
 	    
 <details><summary>What is included in the cost of the automobile</summary>
 <div id="ajax-autoinc">
