--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -322,8 +322,8 @@
 </details> 	
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
-<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the vehicle is a <strong>motor vehicle</strong>, <strong>do not</strong> continue to next step. Refer to: <a href="/cra-arc/payroll/calculate/benefit/motor-vehicle.html#h_2">Motor vehicle provided by the employer</a> </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the vehicle is an <strong>automobile</strong>, continue to: <a href="#h_01">Step 2 - Determine if you made the automobile available to the employee</a></li>
+<li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the vehicle is a <strong>motor vehicle</strong>, <strong>do not</strong> continue to next step. Refer to: <a href="/cra-arc/payroll/calculate/benefit/motor-vehicle.html#h_2">Motor vehicle provided by the employer</a>. </li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the vehicle is an <strong>automobile</strong>, continue to: <a href="#h_01">Step 2 - Determine if you made the automobile available to the employee</a>.</li>
 </ul>
 </li>
 
@@ -332,7 +332,7 @@
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If you <strong>did not</strong> make the automobile available to your employee, there is <strong>no</strong> taxable benefit to calculate. <strong>Do not</strong> continue to next step.  </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If you <strong>made the automobile</strong> available to your employee, continue to: <a href="#step3">Step 3 - Determine if there was personal driving of the automobile</a></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If you <strong>made the automobile</strong> available to your employee, continue to: <a href="#step3">Step 3 - Determine if there was personal driving of the automobile</a>.</li>
 </ul>
 </li>
 
@@ -341,7 +341,7 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If there is <strong>no</strong> personal driving, the use of the employer-provided automobile is <strong>not </strong>a taxable benefit. <strong>Do not</strong> continue to next step.  </li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If there is <strong>personal driving</strong>, the use of the employer-provided automobile may be a taxable benefit. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if any exceptions apply to the automobile benefit</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step4">Step 4 - Determine if any exceptions apply to the automobile benefit</a>.</p></li>
 </ul>
 </li>
 
@@ -351,7 +351,7 @@
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"> </span> If the use of the employer-provided automobile is in <strong>one</strong> of the above special situations, <strong>do not</strong> continue to next step.  </li>
 <li class="cnjnctn-col"> <p><span class="fas fa-check fa-lg text-success"></span> If the use of the employer-provided automobile is <strong>not</strong> in one of the above special situations, the personal driving of the automobile may be a taxable benefit. </p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Determine if the automobile benefit is taxable</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step5">Step 5 - Determine if the automobile benefit is taxable</a>.</p></li>
 </ul>
 </li>
 
@@ -398,7 +398,7 @@
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><span class="fas fa-ban text-danger fa-lg"></span> If the benefit is <strong>not</strong> taxable, you <strong>do not</strong> need to do any calculations. <strong>Do not</strong> continue to next step.  </li>
-<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is <strong>taxable</strong>, continue to: <a href="#step6">Step 6 - Review the required information (logbook) your employee must have kept</a></li>
+<li class="cnjnctn-col"><span class="fas fa-arrow-down text-success fa-lg"></span> If the benefit is <strong>taxable</strong>, continue to: <a href="#step6">Step 6 - Review the required information (logbook) your employee must have kept</a>.</li>
 </ul>
 </li>
 
@@ -407,9 +407,9 @@
 <hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If <strong>no record</strong> is kept, the employee <strong>does not</strong> benefit from the reduction to the standby charge.</p> 
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a></p></li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a>.</p></li>
 <li class="cnjnctn-col"><p><span class="fas fa-check fa-lg text-success"></span> If the employee kept the <strong> required detailed records</strong> and you received a copy, the employee may be eligible for the <strong>reduced standby charge</strong>.</p>
-<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the employee is eligible for the reduced standby charge</a></p></li>
+<p> <span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step7">Step 7 - Determine if the employee is eligible for the reduced standby charge</a>.</p></li>
 </ul>
 </li>
 
@@ -669,24 +669,28 @@
 
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> calculate using the reduced standby charge.</p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine if the employee is eligible for the simplified standby charge calculation</a></p>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step8">Step 8 - Determine if the employee is eligible for the simplified standby charge calculation</a>.</p>
 
 </li>
                          <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If the employee meets <strong>all</strong> conditions, calculate using reduced standby charge.</p>
-<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a></p>
-
-</li>
+<p><span class="fas fa-arrow-down text-success fa-lg"></span> Continue to: <a href="#step9">Step 9 - Determine which method to use to calculate the benefit</a>.</p></li>
                           </ul>
 </li>
 
 <li><h3 id="step8">Determine if the employee is eligible for the simplified standby charge calculation </h3>
 <p>You can use the simplified calculation if <strong>all</strong> the following apply: </p>
-<ul class="fa-ul">
-<li><span class="fas fa-check fa-li text-success"></span> You own the automobile provided to the employee </li>
-<li><span class="fas fa-check fa-li text-success"></span> The employee uses the same automobile throughout the year </li>
-<li><span class="fas fa-check fa-li text-success"></span> The employee's principal source of employment is <strong>not</strong> selling or leasing automobiles </li>
-<li><span class="fas fa-check fa-li text-success"></span> The employee is <strong>not</strong> eligible for the reduced standby charge</li>
+<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<li class="cnjnctn-col">You own the automobile provided to the employee </li>
+<li class="cnjnctn-col">The employee uses the same automobile throughout the year </li>
+<li class="cnjnctn-col">The employee's principal source of employment is <strong>not</strong> selling or leasing automobiles </li>
+<li class="cnjnctn-col">The employee is <strong>not</strong> eligible for the reduced standby charge</li>
 </ul>
+<ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
+			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the simplified standby charge calculation.</p>
+
+</li>
+                         <li class="cnjnctn-col"><p> <span class="fas fa-check fa-lg text-success"></span> If the employee meets <strong>all</strong> conditions, calculate using the simplified standby charge calculation.</p></li>
+                          </ul>
 
 </li>
 
@@ -874,7 +878,7 @@ estimated by the number of pay periods in the year. </p>
 </ul>
 </details>
 </details>
-</br>
+
 <h4 id="detailedmethod" class="mrgn-tp-md">Detailed calculation</h4>	
 <details><summary>Situation: You <strong>own</strong> the automobile and you want to calculate using the <strong>detailed</strong> calculation</summary>
 
@@ -1475,7 +1479,7 @@ estimated by the number of pay periods in the year. </p>
 
 </details>
 </details>
-</br>
+
 <h4 id="reducedmethod" class="mrgn-tp-md">Reduced standby charge calculation</h4>
 <details><summary>Situation: You want to calculate using the <strong>reduced standby charge</strong></summary>
 
