--- a/payroll/calculate/benefit/automobile.html
+++ b/payroll/calculate/benefit/automobile.html
@@ -679,12 +679,13 @@
 
 <li><h3 id="step8">Determine if the employee is eligible for the simplified standby charge calculation </h3>
 <p>You can use the simplified calculation if <strong>all</strong> the following apply: </p>
-<ul class="list-unstyled cnjnctn-type-and cnjnctn-sm">
+<ul class="list-unstyled cnjnctn-type-and">
 <li class="cnjnctn-col">You own the automobile provided to the employee </li>
 <li class="cnjnctn-col">The employee uses the same automobile throughout the year </li>
 <li class="cnjnctn-col">The employee's principal source of employment is <strong>not</strong> selling or leasing automobiles </li>
 <li class="cnjnctn-col">The employee is <strong>not</strong> eligible for the reduced standby charge</li>
 </ul>
+<hr>
 <ul class="list-unstyled cnjnctn-type-or cnjnctn-sm">
 			 <li class="cnjnctn-col"><p><span class="fas fa-ban text-danger fa-lg"></span> If the employee <strong>does not</strong> meet all conditions, <strong>do not</strong> use the simplified standby charge calculation.</p>
 
